--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,124 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<section class="header" id="header">
+<%= render 'layouts/navbar' %>
+  <div class="container">
+    <div class="header-table">
+      <div class="header-wrapper">
+        <h1 class="header-title">
+          Photographe
+        </h1>
+        <p class="header-subtitle">
+          depuis 2010
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="portfolio" id="portfolio">
+  <div class="container section-wrapper">
+    <h2 class="section-title black">
+      portfolio
+    </h2> <!-- /.section-title -->
+    <div class="underline purple"></div>
+    <div class="row">
+      <div class="col-sm-4 col-xs-6 col-md-6">
+        <div class="portfolio-item">
+          <div class="portfolio-img">
+            <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17264819_2229804067245235_1403297039158691512_n.jpg?oh=207fed4ed6f15ddf482b4d5853b9aa3e&oe=59731936" alt="port-1" class="port-item">
+            <div class="portfolio-img-hover">
+              <a href="#"><img class="plus"></a>
+            </div>
+          </div>
+          <div class="portfolio-item-details">
+            <div class="portfolio-item-name">
+              Denis Grisel<br><small>Nature</small>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 col-xs-6 col-md-6">
+        <div class="portfolio-item">
+          <div class="portfolio-img">
+            <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17264155_2229180330640942_6559201386661545325_n.jpg?oh=fc1c4af6214c6ca5470bb71e29c92a5a&oe=59608591" alt="port-2" class="port-item">
+            <div class="portfolio-img-hover">
+              <a href="#"><img class="plus"></a>
+            </div>
+          </div>
+          <div class="portfolio-item-details">
+            <div class="portfolio-item-name">
+              Denis Grisel <br><small>Photography</small>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 col-xs-6 col-md-6">
+        <div class="portfolio-item">
+          <div class="portfolio-img">
+            <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17264652_2227920950766880_1310230789050484718_n.jpg?oh=620c0b87226daeaf07cbb476fd5b947a&oe=594D0DDE" alt="port-3" class="port-item">
+            <div class="portfolio-img-hover">
+              <a href="#"><img class="plus"></a>
+            </div>
+          </div>
+          <div class="portfolio-item-details">
+            <div class="portfolio-item-name">
+              Denis Grisel <br><small>Design</small>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 col-xs-6 col-md-6">
+        <div class="portfolio-item">
+          <div class="portfolio-img">
+            <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17201258_2226963177529324_5171502560956556780_n.jpg?oh=f9d06529d9c80c32db1ce7d96b39b871&oe=596FBB1A" alt="port-4" class="port-item">
+            <div class="portfolio-img-hover">
+              <a href="#"><img class="plus"></a>
+            </div>
+          </div>
+          <div class="portfolio-item-details">
+            <div class="portfolio-item-name">
+              Denis Grisel <br><small>Photography</small>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 col-xs-6 col-md-6">
+        <div class="portfolio-item">
+          <div class="portfolio-img">
+            <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17156196_2222256571333318_2995433018055632004_n.jpg?oh=d4d0b8a409eebccfe47568b810e0c434&oe=5950BC0F" alt="port-5" class="port-item">
+            <div class="portfolio-img-hover">
+              <a href="#"><img class="plus"></a>
+            </div>
+          </div>
+          <div class="portfolio-item-details">
+            <div class="portfolio-item-name">
+              Denis Grisel <br><small>Photography</small>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 col-xs-6 col-md-6">
+        <div class="portfolio-item">
+          <div class="portfolio-img">
+            <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/16938670_2215109265381382_5121312929188564263_n.jpg?oh=cd64e75a8ce9671c62a740af5a74f54d&oe=5962FC6B" alt="port-6" class="port-item">
+            <div class="portfolio-img-hover">
+              <a href="#"><img class="plus"></a>
+            </div>
+          </div>
+          <div class="portfolio-item-details">
+            <div class="portfolio-item-name">
+               Denis Grisel <br><small>Photography</small>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="note gray">
+  <div class="container section-wrapper text-center">
+    <p class="quote">
+      “When you’re a carpenter making a beautiful chest of drawers, you’re not going to use a piece of plywood on the back, even though it faces the wall and nobody will see it. You’ll know it’s there, so you’re going to use a beautiful piece of wood on the back. For you to sleep well at night, the aesthetic, the quality, has to be carried all the way through.”
+    </p>
+    <div class="quoter">Steve Jobs</div>
+  </div>
+</section>
