--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,135 @@
-/* -------------------------------------
- * CSS code specific to home page
- * (margin/padding adjustments)
- * ------------------------------------- */
+.header {
+  background: url('multipage-header.jpg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 100vh;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.header-wrapper{
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+  position: relative;
+}
+.header-table{
+  display: table;
+  height: 70vh;
+  width: 100%;
+}
+.header-title{
+  font-size: 50px;
+  letter-spacing: 10px;
+  font-weight: 200;
+}
+.header-subtitle{
+  font-size: 20px;
+  letter-spacing: 3px;
+}
+
+.porfolio{
+  background: #f9f9f9;
+}
+.portfolio-img{
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+}
+.portfolio-img .port-item{
+  width: 100%;
+  height: auto;
+  transition: all .6s ease-in-out;
+}
+.portfolio-img:hover .portfolio-img-hover{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all .6s ease-in-out;
+  background: rgba(0, 0, 0, 0.5);
+}
+.portfolio-img-hover{
+
+}
+.plus{
+  display: none;
+}
+.portfolio-img:hover .plus{
+  display: inline-block;
+  padding-top: 25%;
+}
+.portfolio-img:hover .port-item{
+  transform: scale(1.1);
+}
+.portfolio-item-details{
+  margin: 20px 0px 50px;
+}
+.portfolio-item-name{
+  display: inline-block;
+  font-size: 15px;
+}
+.port-heart, .portfolio-item-name small{
+  font-size: 13px;
+  color: #969595;
+}
+.port-heart{
+  float: right;
+  display: inline-block;
+  margin-top: 10px;
+}.note{
+  color: #dadada;
+}
+.quote{
+  font-style: italic;
+  font-size: 16px;
+  font-weight: 200;
+  padding: 0px 145px;
+}
+.quoter{
+  font-size: 20px;
+  font-weight: 400;
+  margin-top: 20px;
+}
+
+.black {
+  color: #313131;
+}
+.white {
+  background: #fff ;
+}
+.gray {
+  background: gray;
+}
+.section-wrapper {
+  padding-top: 90px;
+  padding-bottom: 80px;
+}
+.section-title {
+  font-size: 30px;
+  font-weight: 400;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 2px;
+}
+.section-item-title {
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
+.section-item-detail {
+  font-size: 14px;
+    font-weight: 300;
+    margin-bottom: 50px;
+    color: #999;
+    letter-spacing: .39px;
+}
+.underline {
+  height: 2px;
+  width: 50px;
+  margin: 0px auto 60px;
+}
