--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -15,7 +15,7 @@
           <li><a href="/">Accueil</a></li>
           <li><a href="/A_propos">A propos</a></li>
           <li><a href="/Portfolio">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/Contact">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -40,15 +40,12 @@
           <div class="portfolio-img">
             <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17264819_2229804067245235_1403297039158691512_n.jpg?oh=207fed4ed6f15ddf482b4d5853b9aa3e&oe=59731936" alt="port-1" class="port-item">
             <div class="portfolio-img-hover">
-              <a href="#"><img src="<%= image_path 'plus.png' %>"></a>
+              <a href="#"><img src="<%= image_path 'plus.png' %>" alt="plus" class="plus"></a>
             </div>
           </div>
           <div class="portfolio-item-details">
             <div class="portfolio-item-name">
-              Olivera Note <br><small>Fashion</small>
-            </div>
-            <div class="port-heart">
-              <i class="ion-ios-heart-outline"></i> 564
+              Denis Grisel <br><small>Nature</small>
             </div>
           </div>
         </div>
@@ -56,93 +53,78 @@
       <div class="col-sm-4 col-xs-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
-            <img src="assets/images/port-2.png" alt="port-2" class="port-item">
+            <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17264819_2229804067245235_1403297039158691512_n.jpg?oh=207fed4ed6f15ddf482b4d5853b9aa3e&oe=59731936" alt="port-1" class="port-item">
             <div class="portfolio-img-hover">
-              <a href="#"><img src="assets/images/plus.png" alt="plus" class="plus"></a>
-            </div> <!-- /.portfolio-img-hover -->
-          </div> <!-- /.portfolio-img -->
+              <a href="#"><img src="<%= image_path 'plus.png' %>" alt="plus" class="plus"></a>
+            </div>
+          </div>
           <div class="portfolio-item-details">
             <div class="portfolio-item-name">
-              Shift Magazine <br><small>Photography</small>
-            </div> <!-- /.portfolio-item-name -->
-            <div class="port-heart">
-              <i class="ion-ios-heart-outline"></i> 564
-            </div> <!-- /.port-heart -->
-          </div> <!-- /.portfolio-item-details -->
-        </div> <!-- /.portfolio-item -->
-      </div> <!-- /.col-md-4 -->
+              Denis Grisel <br><small>Nature</small>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="col-sm-4 col-xs-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
-            <img src="assets/images/port-3.png" alt="port-3" class="port-item">
+            <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17264819_2229804067245235_1403297039158691512_n.jpg?oh=207fed4ed6f15ddf482b4d5853b9aa3e&oe=59731936" alt="port-1" class="port-item">
             <div class="portfolio-img-hover">
-              <a href="#"><img src="assets/images/plus.png" alt="plus" class="plus"></a>
-            </div> <!-- /.portfolio-img-hover -->
-          </div> <!-- /.portfolio-img -->
+              <a href="#"><img src="<%= image_path 'plus.png' %>" alt="plus" class="plus"></a>
+            </div>
+          </div>
           <div class="portfolio-item-details">
             <div class="portfolio-item-name">
-              Camp Pine Tree <br><small>Web Design</small>
-            </div> <!-- /.portfolio-item-name -->
-            <div class="port-heart">
-              <i class="ion-ios-heart-outline"></i> 564
-            </div> <!-- /.port-heart -->
-          </div> <!-- /.portfolio-item-details -->
-        </div> <!-- /.portfolio-item -->
-      </div> <!-- /.col-md-4 -->
+              Denis Grisel <br><small>Nature</small>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="col-sm-4 col-xs-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
-            <img src="assets/images/port-4.png" alt="port-4" class="port-item">
+            <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17264819_2229804067245235_1403297039158691512_n.jpg?oh=207fed4ed6f15ddf482b4d5853b9aa3e&oe=59731936" alt="port-1" class="port-item">
             <div class="portfolio-img-hover">
-              <a href="#"><img src="assets/images/plus.png" alt="plus" class="plus"></a>
-            </div> <!-- /.portfolio-img-hover -->
-          </div> <!-- /.portfolio-img -->
+              <a href="#"><img src="<%= image_path 'plus.png' %>" alt="plus" class="plus"></a>
+            </div>
+          </div>
           <div class="portfolio-item-details">
             <div class="portfolio-item-name">
-              Freeart App Design <br><small>Photography</small>
-            </div> <!-- /.portfolio-item-name -->
-            <div class="port-heart">
-              <i class="ion-ios-heart-outline"></i> 564
-            </div> <!-- /.port-heart -->
-          </div> <!-- /.portfolio-item-details -->
-        </div> <!-- /.portfolio-item -->
-      </div> <!-- /.col-md-4 -->
+              Denis Grisel <br><small>Nature</small>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="col-sm-4 col-xs-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
-            <img src="assets/images/port-5.png" alt="port-5" class="port-item">
+            <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17264819_2229804067245235_1403297039158691512_n.jpg?oh=207fed4ed6f15ddf482b4d5853b9aa3e&oe=59731936" alt="port-1" class="port-item">
             <div class="portfolio-img-hover">
-              <a href="#"><img src="assets/images/plus.png" alt="plus" class="plus"></a>
-            </div> <!-- /.portfolio-img-hover -->
-          </div> <!-- /.portfolio-img -->
+              <a href="#"><img src="<%= image_path 'plus.png' %>" alt="plus" class="plus"></a>
+            </div>
+          </div>
           <div class="portfolio-item-details">
             <div class="portfolio-item-name">
-              Large Poster Set <br><small>Marketing</small>
-            </div> <!-- /.portfolio-item-name -->
-            <div class="port-heart">
-              <i class="ion-ios-heart-outline"></i> 564
-            </div> <!-- /.port-heart -->
-          </div> <!-- /.portfolio-item-details -->
-        </div> <!-- /.portfolio-item -->
-      </div> <!-- /.col-md-4 -->
+              Denis Grisel <br><small>Nature</small>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="col-sm-4 col-xs-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
-            <img src="assets/images/port-6.png" alt="port-6" class="port-item">
+            <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17264819_2229804067245235_1403297039158691512_n.jpg?oh=207fed4ed6f15ddf482b4d5853b9aa3e&oe=59731936" alt="port-1" class="port-item">
             <div class="portfolio-img-hover">
-              <a href="#"><img src="assets/images/plus.png" alt="plus" class="plus"></a>
-            </div> <!-- /.portfolio-img-hover -->
-          </div> <!-- /.portfolio-img -->
+              <a href="#"><img src="<%= image_path 'plus.png' %>" alt="plus" class="plus"></a>
+            </div>
+          </div>
           <div class="portfolio-item-details">
             <div class="portfolio-item-name">
-              Skilet Album Cover <br><small>Business</small>
-            </div> <!-- /.portfolio-item-name -->
-            <div class="port-heart">
-              <i class="ion-ios-heart-outline"></i> 564
-            </div> <!-- /.port-heart -->
-          </div> <!-- /.portfolio-item-details -->
-        </div> <!-- /.portfolio-item -->
-      </div> <!-- /.col-md-4 -->
+              Denis Grisel <br><small>Nature</small>
+            </div>
+          </div>
+        </div>
+      </div>
     </div> <!-- /.row -->
   </div> <!-- /.container -->
 </section> <!-- /.portfolio -->
