--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -1,5 +1,5 @@
 .section-background{
-  background: url('about.png');
+  background: url('https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/14291796_2090091987883111_407462917773708079_n.jpg?oh=5765f83e5c9a50d277c7faadd78ef66b&oe=595D91E4');
 }
 .about{
   background: #f3f3f3;
