--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,7 +15,7 @@
       <li class="active"><a href="#">Accueil</a></li>
       <li><a href=" /A_propos">A propos</a></li>
       <li><a href="/Portfolio">Portfolio</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="/Contact">Contact</a></li>
     </ul>
     </div>
   </div>
