--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -15,7 +15,7 @@
           <li><a href="#">Accueil</a></li>
           <li class="active"><a href="/A_propos">A propos</a></li>
           <li><a href="/Portfolio">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/Contact">Contact</a></li>
         </ul>
       </div>
     </div>
