--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,10 +12,18 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav navbar-right">
-      <li class="active"><a href="#">Accueil</a></li>
-      <li><a href=" /A_propos">A propos</a></li>
+      <li><a href="/">Accueil</a></li>
+      <li><a href="/A_propos">A propos</a></li>
       <li><a href="/Portfolio">Portfolio</a></li>
       <li><a href="/Contact">Contact</a></li>
+      <% if user_signed_in? %>
+        <li><a href ="/Portfolio">Ajouter des photos</a></li>
+        <li>
+          <%= link_to destroy_user_session_path, method: :delete do %>
+          <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+          <% end %>
+        </li>
+      <% end %>
     </ul>
     </div>
   </div>
