--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
   </head>
   <body>
+    <%= render 'layouts/navbar' %>
+    <%= render 'shared/flash' %>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
     <%= render 'layouts/footer' %>
