--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -1,25 +1,4 @@
 <section class="portfolio-header" id="header">
-  <nav class="navbar navbar-default">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">Denis</a>
-      </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="/">Accueil</a></li>
-          <li><a href="/A_propos">A propos</a></li>
-          <li><a href="/Portfolio">Portfolio</a></li>
-          <li><a href="/Contact">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
 </section>
 <section class="section-background">
   <div class="container">
@@ -125,6 +104,6 @@
           </div>
         </div>
       </div>
-    </div> <!-- /.row -->
-  </div> <!-- /.container -->
-</section> <!-- /.portfolio -->
+    </div>
+  </div>
+</section>
