--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,7 @@
       <li><a href="/Portfolio">Portfolio</a></li>
       <li><a href="/Contact">Contact</a></li>
       <% if user_signed_in? %>
-        <li><a href ="/Portfolio">Ajouter des photos</a></li>
+        <li><a href =" /products/new">Ajouter des photos</a></li>
         <li>
           <%= link_to destroy_user_session_path, method: :delete do %>
           <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
