Modify picture size okay

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,6 +13,15 @@
   </div>
 </section>
 
+<section class="note gray">
+  <div class="container section-wrapper text-center">
+    <p class="quote">
+      “When you’re a carpenter making a beautiful chest of drawers, you’re not going to use a piece of plywood on the back, even though it faces the wall and nobody will see it. You’ll know it’s there, so you’re going to use a beautiful piece of wood on the back. For you to sleep well at night, the aesthetic, the quality, has to be carried all the way through.”
+    </p>
+    <div class="quoter">Steve Jobs</div>
+  </div>
+</section>
+
 <section class="portfolio" id="portfolio">
   <div class="container section-wrapper">
     <h2 class="section-title black">
@@ -25,7 +34,7 @@
           <div class="portfolio-img">
             <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17264819_2229804067245235_1403297039158691512_n.jpg?oh=207fed4ed6f15ddf482b4d5853b9aa3e&oe=59731936" alt="port-1" class="port-item">
             <div class="portfolio-img-hover">
-              <a href="#"><img class="plus"></a>
+              <a href="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
             </div>
           </div>
           <div class="portfolio-item-details">
@@ -40,7 +49,7 @@
           <div class="portfolio-img">
             <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17264155_2229180330640942_6559201386661545325_n.jpg?oh=fc1c4af6214c6ca5470bb71e29c92a5a&oe=59608591" alt="port-2" class="port-item">
             <div class="portfolio-img-hover">
-              <a href="#"><img class="plus"></a>
+              <a href="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
             </div>
           </div>
           <div class="portfolio-item-details">
@@ -55,7 +64,7 @@
           <div class="portfolio-img">
             <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17264652_2227920950766880_1310230789050484718_n.jpg?oh=620c0b87226daeaf07cbb476fd5b947a&oe=594D0DDE" alt="port-3" class="port-item">
             <div class="portfolio-img-hover">
-              <a href="#"><img class="plus"></a>
+              <a href="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
             </div>
           </div>
           <div class="portfolio-item-details">
@@ -70,7 +79,7 @@
           <div class="portfolio-img">
             <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17201258_2226963177529324_5171502560956556780_n.jpg?oh=f9d06529d9c80c32db1ce7d96b39b871&oe=596FBB1A" alt="port-4" class="port-item">
             <div class="portfolio-img-hover">
-              <a href="#"><img class="plus"></a>
+              <a href="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
             </div>
           </div>
           <div class="portfolio-item-details">
@@ -85,7 +94,7 @@
           <div class="portfolio-img">
             <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17156196_2222256571333318_2995433018055632004_n.jpg?oh=d4d0b8a409eebccfe47568b810e0c434&oe=5950BC0F" alt="port-5" class="port-item">
             <div class="portfolio-img-hover">
-              <a href="#"><img class="plus"></a>
+              <a href="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
             </div>
           </div>
           <div class="portfolio-item-details">
@@ -100,7 +109,7 @@
           <div class="portfolio-img">
             <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/16938670_2215109265381382_5121312929188564263_n.jpg?oh=cd64e75a8ce9671c62a740af5a74f54d&oe=5962FC6B" alt="port-6" class="port-item">
             <div class="portfolio-img-hover">
-              <a href="#"><img class="plus"></a>
+              <a href="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
             </div>
           </div>
           <div class="portfolio-item-details">
@@ -111,13 +120,5 @@
         </div>
       </div>
     </div>
-  </div>
-</section>
-<section class="note gray">
-  <div class="container section-wrapper text-center">
-    <p class="quote">
-      “When you’re a carpenter making a beautiful chest of drawers, you’re not going to use a piece of plywood on the back, even though it faces the wall and nobody will see it. You’ll know it’s there, so you’re going to use a beautiful piece of wood on the back. For you to sleep well at night, the aesthetic, the quality, has to be carried all the way through.”
-    </p>
-    <div class="quoter">Steve Jobs</div>
   </div>
 </section>
