--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -40,7 +40,7 @@
 }
 .portfolio-img .port-item{
   width: 100%;
-  height: 300px;
+  min-height: 300px;
   transition: all .6s ease-in-out;
 }
 .portfolio-img:hover .portfolio-img-hover{
@@ -53,13 +53,17 @@
   background: rgba(0, 0, 0, 0.5);
 }
 .portfolio-img-hover{
+  position: relative;
 }
 .plus{
   display: none;
+  position: absolute;
+  top: 40%;
+  left: 43%
 }
 .portfolio-img:hover .plus{
   display: inline-block;
-  padding-top: 20%;
+
 }
 .portfolio-img:hover .port-item{
   transform: scale(1.1);
@@ -71,15 +75,8 @@
   display: inline-block;
   font-size: 15px;
 }
-.port-heart, .portfolio-item-name small{
-  font-size: 13px;
-  color: #969595;
-}
-.port-heart{
-  float: right;
-  display: inline-block;
-  margin-top: 10px;
-}.note{
+
+.note{
   color: #dadada;
 }
 .quote{
