Add Lightbox picture

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -22,7 +22,7 @@
               <div class="portfolio-img">
                <img src='<%=product.photo%>', class='port-item'>
                 <div class="portfolio-img-hover">
-                  <a href="<%=product.photo%>"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
+                  <a href="<%=product.photo%>" data-lightbox="gallery"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
                 </div>
               </div>
               <div class="portfolio-item-details">
