Add a button on homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -119,6 +119,9 @@
           </div>
         </div>
       </div>
+      <div class="button text-center">
+        <a class="btn btn-denis" href="/Portfolio" role="button">En voir plus</a>
+      </div>
     </div>
   </div>
 </section>
