Categories added and ajax create

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -104,6 +104,10 @@
   padding-top: 90px;
   padding-bottom: 80px;
 }
+
+.section-wrapper-portfolio {
+    padding-bottom: 80px;
+}
 .section-title {
   font-size: 30px;
   font-weight: 400;
