--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,6 +9,11 @@
 </p>
 
 <p>
+  <strong>Catégorie:</strong>
+  <%= @product.category %>
+</p>
+
+<p>
   <strong>Photo:</strong>
   <%= @product.photo %>
 </p>
