--- a/app/assets/stylesheets/components/_filters.scss
+++ b/app/assets/stylesheets/components/_filters.scss
@@ -1,41 +1,35 @@
-#filters {
+.filters {
   margin-top: 40px;
-  text-align: center;
-  display: block;
-  float: none;
-  z-index: 2;
-  position: relative;
-  color: #313131;
-  font-size: 20px;
+  margin-left: 410px;
+  color: black;
+  font-size: 12px;
   letter-spacing: 5px;
 }
-#filters ul {
+
+.filters a {
   list-style: none;
-  padding: 0;
+  padding: 10px 15px;
+  border: 1px solid #313131;
 }
-#filters ul li {
+
+.filters a {
   display: inline-block;
 }
-#filters ul li a {
+
+.filters a {
   display: block;
   float: left;
-  padding: 2px 5px;
   color: inherit;
   margin-right: 5px;
   margin-bottom: 5px;
 }
 
-#filters ul li a:hover,#filters ul li a:focus {
+.filters a:hover,.filters a:focus {
   text-decoration:none;
   outline:0;
 }
-#filters ul li a h5 {
-  font-size: 14px;
-  padding: 5px 10px 5px;
-  border: 1px solid #313131;
-}
 
-#filters ul li a:hover h5, #filters ul li a.active h5 {
+.filters a:hover {
   color: white;
   opacity: 0.8;
   background-color: #313131;
