--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -36,7 +36,6 @@
 .portfolio-img{
   position: relative;
   overflow: hidden;
-  text-align: center;
 }
 .portfolio-img .port-item{
   width: 100%;
@@ -48,13 +47,11 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 80%;
   transition: all .6s ease-in-out;
   background: rgba(0, 0, 0, 0.5);
 }
-.portfolio-img-hover{
-  position: relative;
-}
+
 .plus{
   display: none;
   position: absolute;
@@ -74,6 +71,8 @@
 .portfolio-item-name{
   display: inline-block;
   font-size: 15px;
+  margin-right: 305px;
+  color: #313131;
 }
 
 .note{
@@ -107,6 +106,7 @@
 
 .section-wrapper-portfolio {
     padding-bottom: 80px;
+    padding-top: 40px;
 }
 .section-title {
   font-size: 30px;
@@ -114,6 +114,7 @@
   text-transform: uppercase;
   text-align: center;
   letter-spacing: 2px;
+  padding-bottom: 40px;
 }
 .section-item-title {
   font-size: 20px;
