Change CSS homepge title and header

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,11 +1,12 @@
 .navbar-default .navbar-brand{
   border: 1px solid #fff;
   color: #fff;
-  font-size: 30px;
+  font-size: 25px;
   padding: 10px 20px;
   height: auto;
   font-weight: 200;
   letter-spacing: 5px;
+  line-height: 100%;
 }
 .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover{
   color: #fff;
