--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,6 @@
 .header {
-  background: url('https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/14479731_2108967045995605_9165204043299531509_n.jpg?oh=e8afa8dc487ff6794a1803be28fc3bdf&oe=598F063C');
+  background: url('http://res.cloudinary.com/db6cwsgoc/image/upload/q_100/v1492593264/3690_a4fuo8.jpg
+'), linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('background.jpg');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
