--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,10 +3,10 @@
     <div class="header-table">
       <div class="header-wrapper">
         <h1 class="header-title">
-          Photographe
+          Chemin de terre
         </h1>
         <p class="header-subtitle">
-          depuis 2010
+          Photographies de nature & agriculture
         </p>
       </div>
     </div>
