--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,10 +3,9 @@
     <div class="header-table">
       <div class="header-wrapper">
         <h1 class="header-title">
-          Chemin de terre
+          Chemins de terre
         </h1>
         <p class="header-subtitle">
-          Photographies de nature & agriculture
         </p>
       </div>
     </div>
